--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,19 @@
 .Header-Container {
     position: absolute;
-    background-color: white;
-    border: solid 3px red;
+    background-color: black;
 
     width: 100vw;
-    height: 10vh;
+    height: 6%;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
+
+.Header-Container H2 {
+    color: white;
+    padding: 1rem;
+    font-size: xx-large;
+     font-family: 'Futura Bold', 'Futura', 'Futura PT', 'Trebuchet MS', Arial, sans-serif;
+}
+
