--- a/src/index.css
+++ b/src/index.css
@@ -8,13 +8,14 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
-  overflow: hidden;
+  min-height: 100%;
+  background-color: black;
 }
 
 #root {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+  background-color: black;
 }
 
 .Canvas-Container {
