--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Chiron+Sung+HK:ital,wght@0,200..900;1,200..900&family=Manufacturing+Consent&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -10,17 +12,19 @@ html, body {
   width: 100%;
   min-height: 100%;
   background-color: black;
+  overflow-x: hidden;
 }
 
 #root {
   width: 100%;
   min-height: 100%;
   background-color: black;
+  overflow-x: hidden;
 }
 
 .Canvas-Container {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
   position: relative;
   z-index: 1;
+  overflow-x: hidden;
 }
