--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,76 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* Phone rotation handling - Force landscape mode */
+@media screen and (max-height: 500px) and (orientation: landscape) {
+  body {
+    transform: rotate(90deg);
+    transform-origin: left top;
+    width: 100vh;
+    height: 100vw;
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+  
+  #root {
+    transform: rotate(90deg);
+    transform-origin: left top;
+    width: 100vh;
+    height: 100vw;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+  
+  .Canvas-Container {
+    width: 100vh;
+    height: 100vw;
+    transform: rotate(90deg);
+    transform-origin: left top;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+}
+
+/* Alternative approach for better compatibility */
+@media screen and (max-aspect-ratio: 1/1) and (max-height: 600px) {
+  body {
+    transform: rotate(90deg);
+    transform-origin: left top;
+    width: 100vh;
+    height: 100vw;
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+  
+  #root {
+    transform: rotate(90deg);
+    transform-origin: left top;
+    width: 100vh;
+    height: 100vw;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+  
+  .Canvas-Container {
+    width: 100vh;
+    height: 100vw;
+    transform: rotate(90deg);
+    transform-origin: left top;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+}
+
 /* Ensure proper touch scrolling on mobile */
 @media (hover: none) and (pointer: coarse) {
   html, body {
