--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -30,8 +30,17 @@
     border-radius: 4px;
 }
 
+.nav-menu.desktop-nav li a {
+    color: white;
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
 .nav-menu.desktop-nav li:hover {
     opacity: 0.7;
+    background: rgba(255, 255, 255, 0.1);
 }
 
 /* Hamburger Menu */
@@ -113,6 +122,14 @@
     padding: 1rem 2rem;
     border-radius: 8px;
     min-width: 200px;
+}
+
+.nav-menu.mobile-nav li a {
+    color: white;
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 .nav-menu.mobile-nav li:hover {
